# modern-occupancy-grid

./: .cproject  .project  CMakeLists.txt  README.md  gtsam.mk  installdeps.sh  manifest.xml  opengm.mk  tasks.wiki
Data/: Metropolis_Marginals.txt.r16899  SICK_Odometry.txt  SICK_Snapshot.txt  wgetdata.py
Data/cave_player/: README
Data/player_sim_with_reflectance/: README
Data/player_worlds/: cave.cfg  cave.inc  cave.world  hospital.cfg  hospital.inc  hospital.world  hospital_section.cfg  hospital_section.inc  hospital_section.world  simple.cfg  simple.world  simple_rooms.cfg  simple_rooms.inc  simple_rooms.world  stanford-gates1.cfg
OccupancyGrid/include/: DDLaserFactor.hpp  LaserFactor.h  MCMC.h  OccupancyGrid.h  OccupancyGridCache.h  cartesian_product.hpp  cvmat_serialization.h  dualdecomposition.hpp  forward_sensor_model.h  gtsam_adaptor.hpp  loadData.h  occgrid.h  occgrid.hpp  slaveminimizer.hpp  sumproduct.hpp  utility.hpp  visualiser.h
OccupancyGrid/src/: LaserFactor.cpp  OccupancyGrid.cpp  OccupancyGridCache.cpp  captureplayerdata.cpp  cvmat_serialization.cpp  displayMarginals.cpp  dualdecomposition.cpp  forward_sensor_model.cpp  inference_gibbs_sampling.cpp  loadData.cpp  occgrid.cpp  run_belief_propagation.cpp  test_dualdecomposition.cpp  two_assumption_alg.cpp  utility.cpp  visualize_ground_truth.cpp
OccupancyGrid/src/MCMC/: DDMCMC.cpp  Metropolis.cpp
doc/: about_impl.bib  about_impl.tex  presentation.bib  presentation.tex
doc/figures/factorgraph/: fg0.pdf_tex  fg1.pdf_tex  fg2.pdf_tex  fg3.pdf_tex  fg_two_assumption.pdf_tex
doc/figures/zoomAndShow/: convert_bp_to_other_svg.sh
doc/icra2014/: modern_map.bib  modern_map.tex  modern_map_jcorso.tex  reviews.rst
include/: LaserFactor.h  MCMC.h  OccupancyGrid.h
include/OccupancyGrid/: BPLaserFactor.hpp  DDLaserFactor.hpp  LaserFactor.h  MCMC.h  OccupancyGrid.h  TwoAssumptionAlgorithm.h  cartesian_product.hpp  debugflags.h  dualdecomposition.hpp  forward_sensor_model.h  gtsam_adaptor.hpp  gtsam_dualdecomposition.hpp  loadData.h  loadOccupancyGrid.h  observation2d.h  occgrid.h  occgrid.hpp  raytrace.hpp  sumproduct.hpp  sumproduct_traits.hpp  utility.hpp  visualiser.h
scripts/: capturedata.sh  cave_config.sh  conv_exp_albert.sw.py  conv_exp_albertb.sm.py  conv_exp_cave.py  conv_exp_hospital.py  conv_exp_hospital_section.py  convergence_experiment.py  drawfactorgraph.py  dual_decomposition_stepsize.py  hospital_config.sh  hospital_section_config.sh  plot_time_energy.py  run_experiments.py  script_utils.py  simple_rooms_config.sh  simulate_reflectance.sh
src/: LaserFactor.cpp  OccupancyGrid.cpp  TwoAssumptionAlgorithm.cpp  captureplayerdata.cpp  convert_albert_log.cpp  convert_stanford_log.cpp  cvmat_serialization.cpp  displayMarginals.cpp  dualdecomposition.cpp  forward_sensor_model.cpp  inference_gibbs_sampling.cpp  loadData.cpp  loadOccupancyGrid.cpp  occgrid.cpp  run_TwoAssumptionAlgorithm.cpp  run_belief_propagation.cpp  simulateddata.cpp  test_dualdecomposition.cpp  two_assumption_alg.cpp  utility.cpp  visualize_ground_truth.cpp
src/MCMC/: DDMCMC.cpp  Metropolis.cpp
tests/: testFastMetropolis.cpp  testSICKDDMCMC.cpp  testSICKSlowMetropolis.cpp  test_cartesian_product.cpp  test_occgrid.cpp  test_raytrace.cpp  test_slaveminimizer.cpp  test_sumproduct.cpp  test_utility.cpp
